# HR-game

./: Dockerfile  README.md  content.py  db.py  ep10.py  ep3.py  ep6.py  main.py  pyproject.toml  railway.toml
episodes/: ep1.py  ep10.py  ep2.py  ep3.py  ep4.py  ep5.py  ep6.py  ep7.py  ep8.py  ep9.py
